--- a/styles/layout/_main__image-columns.scss
+++ b/styles/layout/_main__image-columns.scss
@@ -41,7 +41,8 @@
         img {
             // position: absolute;
             display: block;
-            margin: auto;
+            // margin: auto;
+            
             // bottom: 0;
             height: auto;
             width: calc(45rem + 20vw);
@@ -68,6 +69,19 @@
             .image-columns__content {
                 transform: translateY(0);
             }
+            .image-columns__heading {
+                transform: translateY(-9.7rem);
+            span {
+                filter: drop-shadow(2px 2.5px 0px black);
+            }
+        @include media-medium {
+            transform: translateY(-8.64rem);
+        }
+        @include media-tablet {
+            transform: translateY(-8.64rem);
+        }
+
+            }
         }
 
         &--1 {
@@ -90,16 +104,22 @@
     &__heading {
         font-size: font-size(small);
         color: white;
+
         width: 100%;
         grid-column: 2/3;
         grid-row: 4/5;
         place-self: center;
+transform: translateY(0);
+        transition: all .3s ease-in-out;
+
 
         span {
             text-align: center;
             display: block;
             text-transform: uppercase;
             letter-spacing: 4px;
+            filter: drop-shadow(0px 0px 0px black);
+
             // transform: scaleY(1.35);
         }
     }
@@ -108,13 +128,14 @@
         transition: transform .3s ease-in-out;
         transform: translateY(69rem);
         place-self: stretch;
-        padding: 2rem 2rem 0rem 2rem;
+        padding: 2rem 2rem 2rem 2rem;
         grid-column: 1/4;
-        grid-row: 5 / 8;
+        grid-row: 4 / 8;
         background-color: rgba(0, 0, 0, 0.90);
         border-top: 10px solid $primary-color;
         display: flex;
         justify-content: center;
+        align-items: flex-end;
         flex-wrap: wrap;
     }
 
@@ -134,6 +155,13 @@
     }
 
     @include media-tablet {
+//         .image-columns__column{
+//         &:active, &:hover{
+//             .image-columns__heading {
+//                 transform: translateY(-8.64rem);
+//                             }
+//         }
+// }
         grid-template-columns: repeat(4, 1fr);
 
         grid-template-rows: repeat(2, 60.5rem);
@@ -336,10 +364,12 @@
         }
         &__heading {
             grid-row: 4/5;
+            color: var(--color-primary);
         }
 
         &__content {
-            grid-row: 5/8;
+            grid-row: 4 / 8;
+
         }
 
         &__btn {
